fable/test/semantic_error/sub_fun_2.f
      program prog
      call sub(fun)
      y = fun(x)
      end
